# termimg

./: Cargo.toml  README.md
imgcat/: Cargo.toml
imgcat/src/: iterm.rs  main.rs  mosaic.rs
src/: apc.rs  graphic.rs  kitty.rs  lib.rs  main.rs  mosaic.rs  sixel.rs  term.rs  utils.rs
termimg/: Cargo.toml
termimg/src/: graphic.rs  iterm.rs  kitty.rs  lib.rs  sixel.rs
