[package]
name = "termimg"
version = "0.1.0"

[dependencies]
ansi_term = "0.7"
docopt = "1.0"
image = "0.23.11"
serde = "1.0"
serde_derive = "1.0"
terminal_size = "*"
termion = "*"
resvg = "0.11.0"
usvg = "0.11.0"
atty = "0.2.14"
base64 = "0.21.2"
infer = "0.14.0"
nix = "0.26.2"
sixel-rs = "0.3.3"
seek_bufread = "1.2.2"
