[package]
name = "termimg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.7"
image = "0.23.11"
terminal_size = "*"
termion = "*"
resvg = "0.11.0"
usvg = "0.11.0"
atty = "0.2.14"
base64 = "0.21.2"
infer = "0.14.0"
nix = "0.26.2"
sixel-rs = "0.3.3"
seek_bufread = "1.2.2"
